@@ -1,3 +1,7 @@
+* 2014-02-14 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 31106: Parse allowed units for bandwidth parameters as described in property file
+
 * 2014-02-11 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 30966: Don't validate e-mail addresses of distribution list members when loading from the database
